# delayAVF

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  build_docker_and_run.sh  calculateFitDecreaseNew.py  dump_circuit.py  genInjectionTargets.py  generate_micro_configs.py  requirements.txt
delayFaultSimulatorRust/: Cargo.toml
delayFaultSimulatorRust/src/: circuit_graph.rs  delay_fault_injector.rs  main.rs  params.rs  recursive_simulator.rs  utils.rs
injector/: aceNessAnalyser.py  avfCalculator.py  circuit.py  custom_types.py  logic.py  params.py  simulator_ticks.py  static_analysis.py  trace.py  util.py  vcdTrace.py
tech_libraries/freepdk-45nm/: freepdk-45nm.lib  freepdk-45nm.v
tech_libraries/nangate45/lib/: NangateOpenCellLibrary_typical_nocomplex.lib
tech_libraries/nangate45/work_around_yosys/: cells.v
tests/: make_firmware.sh
tests/benchmarks/aes_encryption/: Makefile  aes.c  aes_encrypt.c  aes_locl.h
tests/benchmarks/coremark/: Makefile  core_common.c  core_list_join.c  core_matrix.c  core_state.c
tests/benchmarks/hello_vincent/: Makefile  hello_vincent.c  hello_vincent.hex
tests/benchmarks/lzp/: Makefile  lzp.c
tests/benchmarks/mat_mult/: Makefile  mat_mult.c
tests/benchmarks/mat_mult_large/: mat_mult_large.c
tests/benchmarks/ported_beebs_benchmarks/: Makefile  libbubblesort.c  libbubblesort.hex  libcrc.c  libcrc.hex  libdtoa.c  libfibcall.c  libfibcall.hex  liblevenshtein.c  liblevenshtein.hex  libstrstr.c  libstrstr.elf  libstrstr.hex  main.c  matmult.c  matmult.hex  md5.c  (+2 more)
util_scripts/: genNegEdgeFlops.py  plot_beeps.py
(+46 files in other folders)
